# quanta

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
docs/: architecture.md  data.md  deployment.md  exploitation.md  remediation.md  threat-model.md
infra/: README.md  app.py  cdk.json  requirements.txt
infra/stacks/: quanta_bootstrap_stack.py
quanta/: __init__.py  agent.py  capabilities.py  config.py  data_loader.py  exploit.py  tools.py
quanta/adapters/: __init__.py  code_runner.py  metrics_repository.py  reference_data.py  report_delivery.py
quanta/application/: __init__.py  analyst.py  instructions.py
quanta/attacks/: __init__.py  poisoned_reference.py
quanta/domain/: __init__.py  models.py  ports.py
quanta/security/: __init__.py  policy.py  taint.py
reports/: quanta_scan_report.html
scripts/: demo.py  demo_live.sh  deploy.sh  exploit_demo.py  invoke_demo.sh  run_local.py  scan_quanta.py
talk/: SPEAKER_NOTES.md  build_assets.py  build_deck.js  quanta-talk.pptx  record_graph_gif.py  render_exploit.py
tests/: conftest.py  test_composition.py  test_exploit.py  test_tools.py
