[project]
name = "quanta"
version = "0.1.0"
description = "Quanta — a deliberately composable Amazon Bedrock AgentCore data-analyst agent for security education (companion to ZIRAN)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "taoq.ai" }]
keywords = ["agentcore", "bedrock", "ai-security", "ziran", "tool-composition", "education"]

# Runtime deps kept deliberately small. The agent runs locally with the
# built-in deterministic orchestrator (no AWS needed); `strands-agents` and a
# Bedrock model are only required for the real AgentCore deployment.
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Real Amazon Bedrock AgentCore deployment.
agentcore = [
    "bedrock-agentcore>=1.0,<2",
    "strands-agents>=0.1",
    "boto3>=1.28,<2",
]
# Dataset loader (UCI Online Retail II -> read-only SQLite replica).
data = [
    "pandas>=2.2",
    "openpyxl>=3.1",
]
# Security scan / demo tooling.
dev = [
    "ziran[agentcore]>=0.37.0",  # composition-findings API the scan relies on
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
quanta-load-data = "quanta.data_loader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quanta"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
